Fix nav buttons background color, because it's showing behind the buttons text in the mobile nav menu.
Change main content size to 90vh to fit it properly to mobile viewports.

--- a/src/css/components/_buttons.scss
+++ b/src/css/components/_buttons.scss
@@ -20,6 +20,7 @@
     &__visible {
         height: 6rem;
         fill: var(--color-grey-light-4);
+        opacity: 1;
 
         @include respond(tab-port) {
             height: 5rem;
@@ -53,8 +54,8 @@
     
     
     &:hover &__visible {
-            fill: var(--color-primary-1);
- 
+            opacity: 0;
+            
         }
 
     &:hover &__invisible {
@@ -63,6 +64,7 @@
 
     &:focus {
         outline: none;
+        
     }
 }
 
