--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -56,7 +56,7 @@
     width: 100%;
 
     @include respond(phone-big) {
-        height: 100vh;
+        height: 90vh;
         background-position: top center;
     }
 }
